--- a/yura.css
+++ b/yura.css
@@ -1,51 +1,65 @@
 body{
+    -webkit-touch-callout: none;
+    -webkit-text-size-adjust: none;
+    -webkit-user-select: none;
     margin: 0;
 }
-#Menu{
+
+#menuZone{
+    background: url("img/bgMenu.jpg");
     width: 100%;
     height: 50px;
-    background: url("img/bgMenu.jpg");
-    box-shadow: 10px 10px 10px rgba(0,0,0,0.5);
 }
+
+
+#buttonMenu{
+    position: fixed;
+    top: 9px;
+    left: 9px;
+}
+
+/*#foneMenu2
+{
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    left: 0px;
+    background-color: #00000096;
+    opacity: 1;
+    transition: 0.3S;
+}
+
+#foneMenu2:hover + #menuZone2{
+    left: 200px;
+}*/
 
 #Menu2{
+    background-color: #00000094;
+    color: rgba(255, 255, 255, 0.856);
+    font-size: 100%;
+    position: fixed;
     width: 200px;
-    height: 500px;
-    position: fixed;
-    left: 0;
-    top:50px;
-    background: url("img/bgMenu.jpg");
-    box-shadow: 10px 10px 10px rgba(0,0,0,0.5);
+    height: 100%;
+    padding: 0px;
+    left: -300px;
+    transition: 0.3S left;
 }
 
-#Menu3{
-    width: 70px;
-    height: 500px;
-    position: fixed;
-    left: 0;
-    top:50px;
-    background: url("img/bgMenu.jpg");
-    box-shadow: 10px 10px 10px rgba(0,0,0,0.5);
+#Menu2 :active{
+    left: 10px;
 }
 
-#MenuBut{
-    background-color: rgba(0, 0, 0, 0);
-    border: 0;
-    margin: 7px;
+.buttonMenu2{
+    padding: 10px;
 }
 
-.button2{
-    background-color: #ffffff0e;
-    border: 0;
-    color: rgba(255, 255, 255, 0.753);
-    width: 100%;
-    height: 50px;
+.buttonMenu2:hover{
+    padding: 10px;
+    background-color: rgba(0, 0, 0, 0.281);
 }
 
-.button1{
-    background-color: #ffffff00;
-    border: 0;
-    color: rgba(255, 255, 255, 0);
-    width: 0;
-    height: 0px;
+.buttonMenu2:active{
+    padding: 10px;
+    background-color: rgba(255, 0, 0, 0.384);
 }
